--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,7 @@ services:
         volumes:
             - ./nginx_reverse_proxy.conf:/etc/nginx/conf.d/default.conf:ro
             - ./store/static/files:/static:ro
-        links:
-            - node
+
         depends_on:
             - node
 
@@ -50,7 +49,7 @@ services:
             - "/:/rootfs:ro"
             - "/var/run:/var/run:rw"
             - "/sys:/sys:ro"
-            #- "/var/lib/docker/:/var/lib/docker:ro"
+            - /var/snap/docker/common/var-lib-docker:/var/lib/docker:ro
 volumes:
     grafana_config:
         driver: local
