--- a/nginx_reverse_proxy.conf
+++ b/nginx_reverse_proxy.conf
@@ -1,5 +1,7 @@
 upstream api {
     server 1c23-tp-1_node_1:3000;
+#     server 1c23-tp-1_node_2:3000;
+#     server 1c23-tp-1_node_3:3000;  
 }
 
 server {
