--- a/perf/spaceNewsVol2.yaml
+++ b/perf/spaceNewsVol2.yaml
@@ -1,7 +1,7 @@
 config:
   environments:
     api:
-      target: "http://localhost:5555/api"
+      target: 'http://localhost:5555/api'
       plugins:
         statsd:
           host: localhost
@@ -12,27 +12,27 @@ config:
 
   phases:
     - name: Ramp
-      duration: 30
+      duration: 20
       arrivalRate: 1
       rampTo: 5
     - name: Plain
-      duration: 60
+      duration: 30
       arrivalRate: 5
-
-  variables:
-    station:
-      - "SAEZ"
-      - "SBJH"
-      - "KMIA"
-      - "SAEZ"
-      - "KJFK"
-      - "KSFO"
-      - "KORD"
+    - name: ramp
+      duration: 30
+      arrivalRate: 5
+      rampTo: 30
+    - name: Plain
+      duration: 30
+      arrivalRate: 30
+    - name: ramp
+      duration: 30
+      arrivalRate: 30
+      rampTo: 50
+    
 
 scenarios:
-  - name: Metar (/metar)
+  - name: Space News (/space_news)
     flow:
       - get:
-          url: "/metar"
-          qs:
-            station: "{{station}}"
+          url: '/space_news'
