--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 
 services:
-  node:
+  app:
     build: ./app
     links:
       - redis
@@ -18,9 +18,9 @@ services:
       - ./nginx_reverse_proxy.conf:/etc/nginx/conf.d/default.conf:ro
       - ./store/static/files:/static:ro
     links:
-      - node
+      - app
     depends_on:
-      - node
+      - app
 
   graphite:
     image: graphiteapp/graphite-statsd:1.1.10-4
