--- a/nginx_reverse_proxy.conf
+++ b/nginx_reverse_proxy.conf
@@ -1,7 +1,7 @@
 upstream api {
-    server 1c23-tp-1_node_1:3000 weight=2;
-    server 1c23-tp-1_node_2:3000 weight=2;
-    server 1c23-tp-1_node_3:3000 weight=2;  
+    server 1c23-tp-1_app_1:3000 weight=2;
+    server 1c23-tp-1_app_2:3000 weight=2;
+    server 1c23-tp-1_app_3:3000 weight=2;  
 }
 
 limit_req_zone $binary_remote_addr zone=api_rate_limit:10m rate=10r/m;
