--- a/app/package.json
+++ b/app/package.json
@@ -3,13 +3,13 @@
   "dependencies": {
     "axios": "^1.3.6",
     "express": "^4.18.2",
+    "express-rate-limit": "^5.3.0",
     "fast-xml-parser": "^4.2.2",
     "hot-shots": "^10.0.0",
     "metar-decoder": "^1.0.3",
     "nanoid": "^4.0.2",
     "node": "^20.1.0",
     "perf_hooks": "^0.0.1",
-    "redis": "^4.6.5",
-    "express-rate-limit": "^5.3.0"
+    "redis": "^4.6.5"
   }
 }
